@@ -1261,4 +1261,12 @@
   <block id="a77641000b55773f3d4f4abfc8eaa6ac" category="sidebar">Workload Factoryでワークロードを最適化</block>
   <block id="bec1e3daee54f5a9410751eb03bd867e" category="sidebar">ワークロードファクトリーの管理</block>
   <block id="7ffef60a0bb1e63a8505f9e4285dab5f" category="sidebar">ワークロードファクトリーにログイン</block>
+  <block id="9d4ab4efb1eff322f698ff725220f0c6" category="paragraph">NetApp Workload Factory通知サービスには、ストレージの自動容量管理に関する通知が含まれています。</block>
+  <block id="8880bf2394c75ebe6ed859ae103855bd" category="cell">自動SSD容量またはinodeにより成功率が向上する</block>
+  <block id="0f4ae4b5b0836264a3d9e9d0e29731c8" category="cell">最近の自動容量管理更新中に、FSx for ONTAPファイル システムによって SSD 容量またはボリューム inode のいずれかが正常に増加しました。詳細については、Tracker をご覧ください。</block>
+  <block id="1d19e21de0f93b11f5ceb8b535a3afc2" category="cell">容量管理</block>
+  <block id="cad4bcdf6806dc74dc24e416f5e646a0" category="cell">FSx for ONTAPファイル</block>
+  <block id="8ae74df732197be5b987055e70bb307d" category="cell">自動SSD容量またはinodeの障害増加</block>
+  <block id="564359bbc40d00ebaa88afdacbe218a7" category="cell">最近の自動容量管理更新中に、FSx for ONTAPファイル システムは SSD 容量またはボリューム inode を増やすことができませんでした。詳細については、Tracker をご覧ください。</block>
+  <block id="b271a75b2d121a8cb5f59ae458394323" category="section-title">2025年9月9日</block>
 </blocks>
