@@ -1,0 +1,11 @@
+= ストレージの新しい通知
+:allow-uri-read: 
+
+
+
+
+=== ストレージの新しい通知
+
+NetApp Workload Factory通知サービスには、ストレージの自動容量管理に関する通知が含まれています。
+
+link:https://docs.netapp.com/us-en/workload-setup-admin/configure-notifications.html["NetApp Workload Factory の通知"]
